# aprox_eq

./: README.md
.github/workflows/: rust.yml
aprox_derive/: Cargo.toml
aprox_derive/src/: lib.rs
aprox_eq/: Cargo.toml  README.md
aprox_eq/aprox_derive/: Cargo.toml  README.md
aprox_eq/aprox_derive/src/: lib.rs
aprox_eq/src/: floats.rs  lib.rs
float_err/: Cargo.toml  average_err  commonality  commonality_error  commonality_occurances
float_err/src/: main.rs
