[package]
name = "aprox_eq"
authors = ["Evan Overman <evanrileyoverman@gmail.com>"]
repository = "https://github.com/an-prata/aprox_eq"
license = "MIT"
description = "A simple crate for determining aproximate equality between floating point types and deriving this capability to struct comprised of floating point numbers."
version = "1.6.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aprox_derive = "0.3.0"

